<resources>
    <string name="app_name">I am call</string>

    <string name="default_notification_channel_id">messages</string>
    <string name="alphabet">A</string>
    <string name="action_search">Search</string>
    <string name="search_hint">Search Contact</string>
    <string name="follow">150 \n Followers</string>
    <string name="cities">19 \n Cities</string>
    <string name="posts">50 \n Posts</string>
    <string name="call_me">Call Me</string>
    <string name="x">X</string>
    <string name="add_contact">Add Contact</string>
    <string name="edit_contact">Edit Contact</string>
    <string name="first">First</string>
    <string name="sno">Serial No</string>
    <string name="name">name</string>
    <string name="alpha">Alpha</string>
    <string name="middle">Middle</string>
    <string name="last">Last</string>
    <string name="forth">Forth</string>
    <string name="mobile">Mobile</string>
    <string name="action_done">Done</string>
    <string name="full_name_in_gujarati">Full Name In Gujarati</string>
</resources>
